DEPLOYMENT_MANIFEST/Staging/ingress/grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: mon-maxweather.savaree.com
    http:
      paths:
       - path: /?(.*)
         backend:
           serviceName: grafana
           servicePort: 80
