DEPLOYMENT_MANIFEST/Staging/ingress/jen-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: pipeline
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: maxweather.savaree.com
    http:
      paths:
       - path: /?(.*)
         backend:
           serviceName: jenkins
           servicePort: 8080
