DEPLOYMENT_MANIFEST/Staging/ingress/web-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: wether-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: maxweather.savaree.com
    http:
      paths:
       - path: /api?(.*)
         backend:
           serviceName: php-apache
           servicePort: 80
